packages/typ/tests/fixtures/diagnostics/0864_gadt_eval_bool_branch_mismatch_01.ml.expected
File "0864_gadt_eval_bool_branch_mismatch_01.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0864_gadt_eval_bool_branch_mismatch_01 is not a valid module name.

File "0864_gadt_eval_bool_branch_mismatch_01.ml", line 7, characters 20-21:
7 |   | Bool_alpha b -> 0
                        ^
Error: The constant 0 has type int but an expression was expected of type
         a = bool
